--- a/www/index.html
+++ b/www/index.html
@@ -61,6 +61,15 @@
 				</div>
 			</div>
 			<div class="controll-content">
+				{{#each controll}}
+				<div class="topcoat-list">
+					<h3 class="topcoat-list__header">
+						<a href='javascript:' onclick="openUrlInExternal('{{link}}')">{{title}}</a>
+					</h3>
+					<p class="topcoat-list__item">{{dscr}}</p>
+					<h3 class="topcoat-list__header">{{pubDate}}</h3>
+				</div>
+				{{/each}}
 			</div>
 		</script>
 	
@@ -100,6 +109,7 @@
 <script src="js/adapters/memory-adapter.js"></script>
 <script src="js/HomeView.js"></script>
 <script src="js/PlenaryView.js"></script>
+<script src="js/ControllView.js"></script>
 <script src="js/app.js"></script>
 
 </body>
