--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -83,6 +83,14 @@
 				</div>
 			</div>
 			<div class="committee-content">
+				{{#each committee}}
+				<div class="topcoat-list">
+					<h3 class="topcoat-list__header">
+						<a href='javascript:' onclick="openUrlInExternal('{{link}}')">{{title}}</a>
+					</h3>
+					<h3 class="topcoat-list__header">{{pubDate}}</h3>
+				</div>
+				{{/each}}
 			</div>
 		</script>
 	
@@ -96,6 +104,15 @@
 				</div>
 			</div>
 			<div class="committee-content">
+				{{#each news}}
+				<div class="topcoat-list">
+					<h3 class="topcoat-list__header">
+						<a href='javascript:' onclick="openUrlInExternal('{{link}}')">{{title}}</a>
+					</h3>
+					<p class="topcoat-list__item">{{{dscr}}}</p>
+					<h3 class="topcoat-list__header">{{pubDate}}</h3>
+				</div>
+				{{/each}}
 			</div>
 		</script>
 	
@@ -110,6 +127,8 @@
 <script src="js/HomeView.js"></script>
 <script src="js/PlenaryView.js"></script>
 <script src="js/ControllView.js"></script>
+<script src="js/CommitteeView.js"></script>
+<script src="js/NewsView.js"></script>
 <script src="js/app.js"></script>
 
 </body>
