First Screen RAW - ready for MomchY :)

--- a/www/staticHTML.html
+++ b/www/staticHTML.html
@@ -43,9 +43,9 @@
             </div>
             <div class="row">
             	<div class="col center">
-		            <a href="#" class="default-btn controll-btn">
-		            	<img src="assets/img/controll-ico-light.svg" alt="ico" class="ico">
-		            	<span class="txt">Парламентарен контрол</span>
+		            <a href="#" class="default-btn news-btn">
+		            	<img src="assets/img/news-ico-light.svg" alt="ico" class="ico">
+		            	<span class="txt">Новини</span>
 		            </a>
 	            </div>
             </div>
