--- a/www/staticHTML.html
+++ b/www/staticHTML.html
@@ -7,7 +7,7 @@
         <title>Static Parliament App HTML</title>
     </head>
     <body>
-        <div id="home-tpl">
+        <div class="home-tpl">
             <div class="row armorial-wrapper">
                 <div class="col">
                     <img src="assets/img/bulgarian-armorial.svg" class="armorial">
@@ -50,5 +50,16 @@
 	            </div>
             </div>
         </div>
+
+        <div class="plenary-tpl hidden">
+            <div class="bar bar-header">
+                <button class="back-btn button button-icon">
+                    <img src="assets/img/back-arrow.png" alt="ico" class="ico">
+                </button>
+                <h1 class="title">Пленарни заседания</h1>
+                <button class="button button-icon ion-ios7-search"></button>
+            </div>
+        </div>
+        
     </body>
 </html>
