--- a/www/staticHTML.html
+++ b/www/staticHTML.html
@@ -2,15 +2,15 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <link rel="stylesheet" type="text/css" href="assets/css/ionic.min.css">
-        <link rel="stylesheet" type="text/css" href="assets/css/styles.css" />
+        <link rel="stylesheet" type="text/css" href="../assets/css/ionic.min.css">
+        <link rel="stylesheet" type="text/css" href="../assets/css/styles.css" />
         <title>Static Parliament App HTML</title>
     </head>
     <body>
         <div class="home-tpl">
             <div class="row armorial-wrapper">
                 <div class="col">
-                    <img src="assets/img/bulgarian-armorial.svg" class="armorial">
+                    <img src="../assets/img/bulgarian-armorial.svg" class="armorial">
                     <h1 class="title">
                     <span>Народно събрание на</span></br>
                     Република България
@@ -20,7 +20,7 @@
             <div class="row">
             	<div class="col center">
             		<a href="#" class="default-btn plenary-btn">
-            			<img src="assets/img/plenary-ico-light.svg" alt="ico" class="ico">
+            			<img src="../assets/img/plenary-ico-light.svg" alt="ico" class="ico">
             			<span class="txt">Пленарни заседания</span>
             		</a>
             	</div>
@@ -28,7 +28,7 @@
             <div class="row">
             	<div class="col center">
 		            <a href="#" class="default-btn controll-btn">
-		            	<img src="assets/img/controll-ico-light.svg" alt="ico" class="ico">
+		            	<img src="../assets/img/controll-ico-light.svg" alt="ico" class="ico">
 		            	<span class="txt">Парламентарен контрол</span>
 		            </a>
 	            </div>
@@ -36,7 +36,7 @@
             <div class="row">
             	<div class="col center">
 		            <a href="#" class="default-btn committee-btn">
-		            	<img src="assets/img/committee-ico-light.svg" alt="ico" class="ico">
+		            	<img src="../assets/img/committee-ico-light.svg" alt="ico" class="ico">
 		            	<span class="txt">Заседания на</br> парламентарни комисии</span>
 		            </a>
 	            </div>
@@ -44,7 +44,7 @@
             <div class="row">
             	<div class="col center">
 		            <a href="#" class="default-btn news-btn">
-		            	<img src="assets/img/news-ico-light.svg" alt="ico" class="ico">
+		            	<img src="../assets/img/news-ico-light.svg" alt="ico" class="ico">
 		            	<span class="txt">Новини</span>
 		            </a>
 	            </div>
@@ -54,12 +54,12 @@
         <div class="plenary-tpl hidden">
             <div class="bar bar-header">
                 <button class="back-btn button button-icon">
-                    <img src="assets/img/back-arrow.png" alt="ico" class="ico">
+                    <img src="../assets/img/back-arrow.png" alt="ico" class="ico">
                 </button>
                 <h1 class="title">Пленарни заседания</h1>
                 <button class="button button-icon ion-ios7-search"></button>
             </div>
         </div>
-        
+
     </body>
 </html>
