--- a/platforms/android/assets/www/staticHTML.html
+++ b/platforms/android/assets/www/staticHTML.html
@@ -7,7 +7,7 @@
         <title>Static Parliament App HTML</title>
     </head>
     <body>
-        <div class="home-tpl">
+        <div class="home-tpl hidden">
             <div class="row armorial-wrapper">
                 <div class="col">
                     <img src="assets/img/bulgarian-armorial.svg" class="armorial">
@@ -51,15 +51,76 @@
             </div>
         </div>
 
-        <div class="plenary-tpl hidden">
+        <div class="plenary-tpl">
             <div class="bar bar-header">
                 <button class="back-btn button button-icon">
                     <img src="assets/img/back-arrow.png" alt="ico" class="ico">
                 </button>
                 <h1 class="title">Пленарни заседания</h1>
-                <button class="button button-icon ion-ios7-search"></button>
+                <button class="search-btn button button-icon">
+                    <img src="assets/img/search-icon.png" alt="ico" class="ico">
+                </button>
             </div>
+            <div class="row search-row">
+                <div class="col">
+                    <div class="search-wrapper">
+                        <input type="text" placeholder="Търси заседание" class="search-field" />
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col content-wrapper">
+
+                    <div class="row short-preview">
+                        <div class=".col-67 description">
+                            Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
+                        </div>
+                        <div class="col-33">
+                            <div class="date">12.04.2014</div>
+                            <button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+                        </div>
+                    </div>
+                    <div class="row short-preview">
+                        <div class=".col-67 description">
+                            Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
+                        </div>
+                        <div class="col-33">
+                            <div class="date">12.04.2014</div>
+                            <button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+                        </div>
+                    </div>
+                    <div class="row short-preview">
+                        <div class=".col-67 description">
+                            Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
+                        </div>
+                        <div class="col-33">
+                            <div class="date">12.04.2014</div>
+                            <button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+                        </div>
+                    </div>
+                    <div class="row short-preview">
+                        <div class=".col-67 description">
+                            Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
+                        </div>
+                        <div class="col-33">
+                            <div class="date">12.04.2014</div>
+                            <button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+                        </div>
+                    </div>
+                    <div class="row short-preview">
+                        <div class=".col-67 description">
+                            Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
+                        </div>
+                        <div class="col-33">
+                            <div class="date">12.04.2014</div>
+                            <button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+                        </div>
+                    </div>
+                    
+                </div>
+            </div>
+
         </div>
-        
+
     </body>
 </html>
