scroll bug FIXED

--- a/www/staticHTML.html
+++ b/www/staticHTML.html
@@ -61,6 +61,7 @@
                     <img src="assets/img/search-icon.png" alt="ico" class="ico">
                 </button>
             </div>
+
             <div class="row search-row">
                 <div class="col">
                     <div class="search-wrapper">
@@ -68,6 +69,7 @@
                     </div>
                 </div>
             </div>
+
             <div class="row">
                 <div class="col content-wrapper">
 
@@ -116,10 +118,27 @@
                             <button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
                         </div>
                     </div>
+                    <div class="row short-preview">
+                        <div class=".col-67 description">
+                            Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
+                        </div>
+                        <div class="col-33">
+                            <div class="date">12.04.2014</div>
+                            <button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+                        </div>
+                    </div>
+                    <div class="row short-preview">
+                        <div class=".col-67 description">
+                            Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
+                        </div>
+                        <div class="col-33">
+                            <div class="date">12.04.2014</div>
+                            <button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+                        </div>
+                    </div>
                     
                 </div>
             </div>
-
         </div>
 
     </body>
