--- a/platforms/android/assets/www/staticHTML.html
+++ b/platforms/android/assets/www/staticHTML.html
@@ -7,7 +7,7 @@
         <title>Static Parliament App HTML</title>
     </head>
     <body>
-        <div class="home-tpl hidden">
+        <div class="home-tpl">
             <div class="row armorial-wrapper">
                 <div class="col">
                     <img src="assets/img/bulgarian-armorial.svg" class="armorial">
@@ -51,7 +51,7 @@
             </div>
         </div>
 
-        <div class="plenary-tpl">
+        <div class="plenary-tpl hidden">
             <div class="bar bar-header">
                 <button class="back-btn button button-icon">
                     <img src="assets/img/back-arrow.png" alt="ico" class="ico">
