--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -94,6 +94,29 @@
 				</div>
 			</div>
 
+            <div class="tabs tabs-icon-top bottom-tabs">
+                <a class="tab-item">
+                <i class="icon ion-home"></i>
+                П. заседания
+                </a>
+                <a class="tab-item">
+                <i class="icon ion-star"></i>
+                П. Контрол
+                </a>
+                <a class="tab-item">
+                <i class="icon ion-gear-a"></i>
+                П. Комисии
+                </a>
+                <a class="tab-item">
+                <i class="icon ion-gear-a"></i>
+                Новини
+                </a>
+                <a class="tab-item">
+                <i class="icon ion-gear-a"></i>
+                Настройки
+                </a>
+            </div>
+
 		</div>
 
 </script>
