--- a/platforms/android/assets/www/staticHTML.html
+++ b/platforms/android/assets/www/staticHTML.html
@@ -7,7 +7,7 @@
         <title>Static Parliament App HTML</title>
     </head>
     <body>
-        <div class="home-tpl">
+        <div class="home-tpl hidden">
             <div class="row armorial-wrapper">
                 <div class="col">
                     <img src="assets/img/bulgarian-armorial.svg" class="armorial">
@@ -18,50 +18,50 @@
                 </div>
             </div>
             <div class="row">
-            	<div class="col center">
-            		<a href="#" class="default-btn plenary-btn">
-            			<img src="assets/img/plenary-ico-light.svg" alt="ico" class="ico">
-            			<span class="txt">Пленарни заседания</span>
-            		</a>
-            	</div>
+                <div class="col center">
+                    <a href="#" class="default-btn plenary-btn">
+                    <img src="assets/img/plenary-ico-light.svg" alt="ico" class="ico">
+                    <span class="txt">Пленарни заседания</span>
+                    </a>
+                </div>
             </div>
             <div class="row">
-            	<div class="col center">
-		            <a href="#" class="default-btn controll-btn">
-		            	<img src="assets/img/controll-ico-light.svg" alt="ico" class="ico">
-		            	<span class="txt">Парламентарен контрол</span>
-		            </a>
-	            </div>
+                <div class="col center">
+                    <a href="#" class="default-btn controll-btn">
+                    <img src="assets/img/controll-ico-light.svg" alt="ico" class="ico">
+                    <span class="txt">Парламентарен контрол</span>
+                    </a>
+                </div>
             </div>
             <div class="row">
-            	<div class="col center">
-		            <a href="#" class="default-btn committee-btn">
-		            	<img src="assets/img/committee-ico-light.svg" alt="ico" class="ico">
-		            	<span class="txt">Заседания на</br> парламентарни комисии</span>
-		            </a>
-	            </div>
+                <div class="col center">
+                    <a href="#" class="default-btn committee-btn">
+                    <img src="assets/img/committee-ico-light.svg" alt="ico" class="ico">
+                    <span class="txt">Заседания на</br> парламентарни комисии</span>
+                    </a>
+                </div>
             </div>
             <div class="row">
-            	<div class="col center">
-		            <a href="#" class="default-btn news-btn">
-		            	<img src="assets/img/news-ico-light.svg" alt="ico" class="ico">
-		            	<span class="txt">Новини</span>
-		            </a>
-	            </div>
+                <div class="col center">
+                    <a href="#" class="default-btn news-btn">
+                    <img src="assets/img/news-ico-light.svg" alt="ico" class="ico">
+                    <span class="txt">Новини</span>
+                    </a>
+                </div>
             </div>
         </div>
+        <!-- END home-tpl -->
 
-        <div class="plenary-tpl hidden">
+        <div class="plenary-tpl">
             <div class="bar bar-header">
                 <button class="back-btn button button-icon">
-                    <img src="assets/img/back-arrow.png" alt="ico" class="ico">
+                <img src="assets/img/back-arrow.png" alt="ico" class="ico">
                 </button>
                 <h1 class="title">Пленарни заседания</h1>
                 <button class="search-btn button button-icon">
-                    <img src="assets/img/search-icon.png" alt="ico" class="ico">
+                <img src="assets/img/search-icon.png" alt="ico" class="ico">
                 </button>
             </div>
-
             <div class="row search-row">
                 <div class="col">
                     <div class="search-wrapper">
@@ -69,113 +69,134 @@
                     </div>
                 </div>
             </div>
-
             <div class="row">
                 <div class="col content-wrapper">
+                    <div class="row short-preview">
+                        <div class=".col-67 description">
+                            Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
+                        </div>
+                        <div class="col-33">
+                            <div class="date">12.04.2014</div>
+                            <button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+                        </div>
+                    </div>
+                    <div class="row short-preview">
+                        <div class=".col-67 description">
+                            Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
+                        </div>
+                        <div class="col-33">
+                            <div class="date">12.04.2014</div>
+                            <button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+                        </div>
+                    </div>
+                    <div class="row short-preview">
+                        <div class=".col-67 description">
+                            Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
+                        </div>
+                        <div class="col-33">
+                            <div class="date">12.04.2014</div>
+                            <button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+                        </div>
+                    </div>
+                    <div class="row short-preview">
+                        <div class=".col-67 description">
+                            Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
+                        </div>
+                        <div class="col-33">
+                            <div class="date">12.04.2014</div>
+                            <button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+                        </div>
+                    </div>
+                    <div class="row short-preview">
+                        <div class=".col-67 description">
+                            Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
+                        </div>
+                        <div class="col-33">
+                            <div class="date">12.04.2014</div>
+                            <button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+                        </div>
+                    </div>
+                    <div class="row short-preview">
+                        <div class=".col-67 description">
+                            Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
+                        </div>
+                        <div class="col-33">
+                            <div class="date">12.04.2014</div>
+                            <button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+                        </div>
+                    </div>
+                    <div class="row short-preview">
+                        <div class=".col-67 description">
+                            Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
+                        </div>
+                        <div class="col-33">
+                            <div class="date">12.04.2014</div>
+                            <button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+                        </div>
+                    </div>
+                    <div class="row short-preview">
+                        <div class=".col-67 description">
+                            Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
+                        </div>
+                        <div class="col-33">
+                            <div class="date">12.04.2014</div>
+                            <button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+                        </div>
+                    </div>
+                    <div class="row short-preview">
+                        <div class=".col-67 description">
+                            Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
+                        </div>
+                        <div class="col-33">
+                            <div class="date">12.04.2014</div>
+                            <button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+                        </div>
+                    </div>
+                    <div class="row short-preview">
+                        <div class=".col-67 description">
+                            Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
+                        </div>
+                        <div class="col-33">
+                            <div class="date">12.04.2014</div>
+                            <button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+                        </div>
+                    </div>
+                    <div class="row short-preview">
+                        <div class=".col-67 description">
+                            Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
+                        </div>
+                        <div class="col-33">
+                            <div class="date">12.04.2014</div>
+                            <button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+                        </div>
+                    </div>
 
-                    <div class="row short-preview">
-                        <div class=".col-67 description">
-                            Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
-                        </div>
-                        <div class="col-33">
-                            <div class="date">12.04.2014</div>
-                            <button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
-                        </div>
-                    </div>
-                    <div class="row short-preview">
-                        <div class=".col-67 description">
-                            Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
-                        </div>
-                        <div class="col-33">
-                            <div class="date">12.04.2014</div>
-                            <button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
-                        </div>
-                    </div>
-                    <div class="row short-preview">
-                        <div class=".col-67 description">
-                            Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
-                        </div>
-                        <div class="col-33">
-                            <div class="date">12.04.2014</div>
-                            <button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
-                        </div>
-                    </div>
-                    <div class="row short-preview">
-                        <div class=".col-67 description">
-                            Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
-                        </div>
-                        <div class="col-33">
-                            <div class="date">12.04.2014</div>
-                            <button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
-                        </div>
-                    </div>
-                    <div class="row short-preview">
-                        <div class=".col-67 description">
-                            Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
-                        </div>
-                        <div class="col-33">
-                            <div class="date">12.04.2014</div>
-                            <button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
-                        </div>
-                    </div>
-                    <div class="row short-preview">
-                        <div class=".col-67 description">
-                            Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
-                        </div>
-                        <div class="col-33">
-                            <div class="date">12.04.2014</div>
-                            <button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
-                        </div>
-                    </div>
-                    <div class="row short-preview">
-                        <div class=".col-67 description">
-                            Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
-                        </div>
-                        <div class="col-33">
-                            <div class="date">12.04.2014</div>
-                            <button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
-                        </div>
-                    </div>
-                    <div class="row short-preview">
-                        <div class=".col-67 description">
-                            Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
-                        </div>
-                        <div class="col-33">
-                            <div class="date">12.04.2014</div>
-                            <button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
-                        </div>
-                    </div>
-                    <div class="row short-preview">
-                        <div class=".col-67 description">
-                            Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
-                        </div>
-                        <div class="col-33">
-                            <div class="date">12.04.2014</div>
-                            <button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
-                        </div>
-                    </div>
-                    <div class="row short-preview">
-                        <div class=".col-67 description">
-                            Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
-                        </div>
-                        <div class="col-33">
-                            <div class="date">12.04.2014</div>
-                            <button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
-                        </div>
-                    </div>
-                    <div class="row short-preview">
-                        <div class=".col-67 description">
-                            Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
-                        </div>
-                        <div class="col-33">
-                            <div class="date">12.04.2014</div>
-                            <button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
-                        </div>
-                    </div>
-                    
                 </div>
             </div>
-        </div>
 
+            <div class="tabs tabs-icon-top bottom-tabs">
+                <a class="tab-item">
+                <i class="icon ion-home"></i>
+                П. заседания
+                </a>
+                <a class="tab-item">
+                <i class="icon ion-star"></i>
+                П. Контрол
+                </a>
+                <a class="tab-item">
+                <i class="icon ion-gear-a"></i>
+                П. Комисии
+                </a>
+                <a class="tab-item">
+                <i class="icon ion-gear-a"></i>
+                Новини
+                </a>
+                <a class="tab-item">
+                <i class="icon ion-gear-a"></i>
+                Настройки
+                </a>
+            </div>
+        </div>
+        <!-- END plenary-tpl -->
     </body>
 </html>
