--- a/www/index.html
+++ b/www/index.html
@@ -91,8 +91,178 @@
 						</div>
 					</div>
 					{{/each}}
+
+                    <div class="row short-preview">
+                        <div class=".col-67 description">
+                            Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
+                        </div>
+                        <div class="col-33">
+                            <div class="date">12.04.2014</div>
+                            <button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+                        </div>
+                    </div>
+                    <div class="row short-preview">
+                        <div class=".col-67 description">
+                            Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
+                        </div>
+                        <div class="col-33">
+                            <div class="date">12.04.2014</div>
+                            <button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+                        </div>
+                    </div>
+                    <div class="row short-preview">
+                        <div class=".col-67 description">
+                            Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
+                        </div>
+                        <div class="col-33">
+                            <div class="date">12.04.2014</div>
+                            <button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+                        </div>
+                    </div>
+                    <div class="row short-preview">
+                        <div class=".col-67 description">
+                            Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
+                        </div>
+                        <div class="col-33">
+                            <div class="date">12.04.2014</div>
+                            <button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+                        </div>
+                    </div>
+                    <div class="row short-preview">
+                        <div class=".col-67 description">
+                            Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
+                        </div>
+                        <div class="col-33">
+                            <div class="date">12.04.2014</div>
+                            <button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+                        </div>
+                    </div>
+                    <div class="row short-preview">
+                        <div class=".col-67 description">
+                            Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
+                        </div>
+                        <div class="col-33">
+                            <div class="date">12.04.2014</div>
+                            <button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+                        </div>
+                    </div>
+                    <div class="row short-preview">
+                        <div class=".col-67 description">
+                            Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
+                        </div>
+                        <div class="col-33">
+                            <div class="date">12.04.2014</div>
+                            <button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+                        </div>
+                    </div>
+                    <div class="row short-preview">
+                        <div class=".col-67 description">
+                            Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
+                        </div>
+                        <div class="col-33">
+                            <div class="date">12.04.2014</div>
+                            <button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+                        </div>
+                    </div>
+                    <div class="row short-preview">
+                        <div class=".col-67 description">
+                            Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
+                        </div>
+                        <div class="col-33">
+                            <div class="date">12.04.2014</div>
+                            <button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+                        </div>
+                    </div>
+                    <div class="row short-preview">
+                        <div class=".col-67 description">
+                            Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
+                        </div>
+                        <div class="col-33">
+                            <div class="date">12.04.2014</div>
+                            <button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+                        </div>
+                    </div>
+                    <div class="row short-preview">
+                        <div class=".col-67 description">
+                            Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
+                        </div>
+                        <div class="col-33">
+                            <div class="date">12.04.2014</div>
+                            <button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+                        </div>
+                    </div>
+                    <div class="row short-preview">
+                        <div class=".col-67 description">
+                            Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
+                        </div>
+                        <div class="col-33">
+                            <div class="date">12.04.2014</div>
+                            <button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+                        </div>
+                    </div>
+                    <div class="row short-preview">
+                        <div class=".col-67 description">
+                            Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
+                        </div>
+                        <div class="col-33">
+                            <div class="date">12.04.2014</div>
+                            <button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+                        </div>
+                    </div>
+                    <div class="row short-preview">
+                        <div class=".col-67 description">
+                            Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
+                        </div>
+                        <div class="col-33">
+                            <div class="date">12.04.2014</div>
+                            <button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+                        </div>
+                    </div>
+                    <div class="row short-preview">
+                        <div class=".col-67 description">
+                            Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
+                        </div>
+                        <div class="col-33">
+                            <div class="date">12.04.2014</div>
+                            <button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+                        </div>
+                    </div>
+                    <div class="row short-preview">
+                        <div class=".col-67 description">
+                            Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
+                        </div>
+                        <div class="col-33">
+                            <div class="date">12.04.2014</div>
+                            <button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+                        </div>
+                    </div>
+
+
 				</div>
 			</div>
+
+            <div class="tabs tabs-icon-top bottom-tabs">
+                <a class="tab-item">
+                <i class="icon ion-home"></i>
+                П. заседания
+                </a>
+                <a class="tab-item">
+                <i class="icon ion-star"></i>
+                П. Контрол
+                </a>
+                <a class="tab-item">
+                <i class="icon ion-gear-a"></i>
+                П. Комисии
+                </a>
+                <a class="tab-item">
+                <i class="icon ion-gear-a"></i>
+                Новини
+                </a>
+                <a class="tab-item">
+                <i class="icon ion-gear-a"></i>
+                Настройки
+                </a>
+            </div>
 
 		</div>
 
