--- a/www/staticHTML.html
+++ b/www/staticHTML.html
@@ -134,6 +134,42 @@
                             <button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
                         </div>
                     </div>
+                    <div class="row short-preview">
+                        <div class=".col-67 description">
+                            Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
+                        </div>
+                        <div class="col-33">
+                            <div class="date">12.04.2014</div>
+                            <button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+                        </div>
+                    </div>
+                    <div class="row short-preview">
+                        <div class=".col-67 description">
+                            Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
+                        </div>
+                        <div class="col-33">
+                            <div class="date">12.04.2014</div>
+                            <button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+                        </div>
+                    </div>
+                    <div class="row short-preview">
+                        <div class=".col-67 description">
+                            Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
+                        </div>
+                        <div class="col-33">
+                            <div class="date">12.04.2014</div>
+                            <button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+                        </div>
+                    </div>
+                    <div class="row short-preview">
+                        <div class=".col-67 description">
+                            Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
+                        </div>
+                        <div class="col-33">
+                            <div class="date">12.04.2014</div>
+                            <button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+                        </div>
+                    </div>
 
                 </div>
             </div>
