--- a/www/index.html
+++ b/www/index.html
@@ -57,7 +57,7 @@
 </script>
 
 <script id="plenary-tpl" type="text/x-handlebars-template">
-		<div class="plenary-tpl">
+		<div class="plenary-tpl" style="height: 93%; overflow: auto;">
 			<div class="bar bar-header">
 				<button class="back-btn button button-icon" onclick="javascript:history.back(1)">
 					<img src="assets/img/back-arrow.png" alt="ico" class="ico">
